tests/basic/good/test08.pepa
// File: tests/good/test08.pepa
// Syntax analysis: all actions can be hidden

r = 1.0;
s = 10.0;

P1 = (a, r).P2;
P2 = (b, s).P1; 

( (P1 <> P1) / {a, b} )


