tests/basic/bad/test52.pepa
% File: tests/bad/test52.pepa
% Syntax error, missing equals in definition
P  (a, r).P;
(P <> P)
